<resources>
    <string name="app_name">快牛直播</string>
    <string name="action_settings">Settings</string>
    <string name="null_value">-</string>
    <string name="tab_main_home">快牛</string>
    <string name="tab_main_live">直播</string>
    <string name="tab_main_friends">快讯</string>
    <string name="tab_main_teacher">牛人</string>
    <string name="tab_main_me">我的</string>
    <string name="value_friends_post_content">
        ChinaJoy，全称中国国际数码互动娱乐展览会，是中国继美国E3展、日本东京电玩展、德国科隆国际游戏展之后的又一同类型互动娱乐展，犹以网络游戏为主。展会自2004年第一届在北京展览馆举行，从第二届起每年在上海浦东新国际博览中心举行。每届有中外游戏厂商参与，各自发布最新游戏及娱乐产品，发放其测试帐号，赠送游戏周边产品，另有Cosplay表演，互动游戏等。
    </string>
    <string name="value_comment_count">(%s)</string>
    <string name="value_comment_like">(%s)</string>
    <string name="toast_not_network">无可用的网络连接，请检查后重试</string>
    <string name="net_error">加载失败,点击可重试</string>
    <string name="system_update_dialog_title">发现新版本</string>
    <string name="system_update_dialog_rightnow">立即更新</string>
    <string name="system_update_dialog_later">稍后更新</string>
    <string name="update_notification">您有新版本可以下载，点击更新</string>
    <string name="new_infor_count">%d条新消息</string>
    <string name="empty"></string>
    <string name="permission_tip_dialog_positive_button_text">去设置</string>
    <string name="permission_tip_dialog_title">权限申请</string>
    <string name="permission_tip_dialog_message_sms">本APP使用短信权限为您自动填写验证码。拒绝该权限不会影响本APP的正常使用。点击授权&#8212;&#8212;不再询问可屏蔽该消息。</string>
    <string name="permission_tip_dialog_message_camera">请在设置-快牛直播-权限中开启相机权限，以正常使用拍照、扫描二维码等功能。</string>
    <string name="permission_tip_dialog_message_record_audio">请在设置-快牛直播-权限中开启录音权限。</string>
    <string name="permission_tip_dialog_message_storage">本APP使用存储空间权限缓存数据、下载视频、记录应用日志。\n请在设置-快牛直播-权限中开启存储空间权限。</string>
    <string name="permission_tip_dialog_message_phone">本APP使用电话权限确定唯一的设备ID，以保证推送功能正常使用、方便直接拨打快牛TV客服电话。不会拨打其他号码或终止通话。\n请在设置-快牛直播-权限中开启电话权限。</string>
    <string name="dialog_login_prompt">您还没有登录 , 请先登录 .</string>
    <string name="comment">评论</string>
    <string name="publish">发表</string>
    <string name="synopsis">简介</string>
    <string name="zone_home">专区</string>
    <string name="close">关闭</string>
    <string name="exit">退出</string>
    <string name="logout">注销</string>
    <string name="register_now">立即注册</string>
    <string name="region_code_error">国家代码无效</string>
    <string name="prompt">提示</string>
    <string name="message">消息</string>
    <string name="message_igxhelper">快牛TV助手</string>
    <string name="message_activity">活动消息</string>
    <string name="message_activity_detail">活动详情</string>
    <string name="message_activity_collection">活动收藏</string>
    <string name="message_comment">评论消息</string>
    <string name="cancel">取消</string>
    <string name="skip">跳过</string>
    <string name="complete">完成</string>
    <string name="teacher">老师</string>
    <string name="collection">收藏</string>
    <string name="more_than_999">999+</string>
    <string name="adjust_font_size">调整字型</string>
    <string name="social_account_login">社交账号登录</string>
    <string name="message_login">使用短信验证码登录</string>
    <string name="written_verification_code">填写验证码</string>
    <string name="next_step">下一步</string>
    <string name="set_password">设置密码</string>
    <string name="login">登录</string>
    <string name="login_qc">二维码登录</string>
    <string name="register">注册</string>
    <string name="password">密码</string>
    <string name="password_twoSpaces">密&#160;&#160;&#160;&#160;码</string>
    <string name="password_fourSpaces">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="check_code">验证码</string>
    <string name="check_code_space_at_center">验&#160;&#160;证&#160;&#160;码</string>
    <string name="submit_check_code">发送验证码</string>
    <string name="hint_password">密码至少6位数</string>
    <string name="hint_password_affirm">请再次确认密码</string>
    <string name="hint_input_phoneNumber">请输入手机号码</string>
    <string name="hint_input_phoneNumber2">请输入手机号码或绑定的邮箱</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="hint_input_check_code">请输入验证码</string>
    <string name="hint_phoneNumber">手机号</string>
    <string name="seek_password">找回密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="to_resend">重新发送</string>
    <string name="alter">修改</string>
    <string name="binding">绑定</string>
    <string name="certificationed">已认证</string>
    <string name="uncertification">未认证</string>
    <string name="label_individuality_signature">个人资料</string>
    <string name="label_security_settings">安全设置</string>
    <string name="label_email_binding">邮箱绑定</string>
    <string name="label_alter_password">修改密码</string>
    <string name="label_login_account">登录账号</string>
    <string name="label_bind_account">第三方账号绑定</string>
    <string name="label_login_thrid_account">第三方账号登录</string>
    <string name="label_identity_authentication">身份认证</string>
    <string name="label_logout">注销登录</string>
    <string name="push_setting">推送设置</string>
    <string name="my_follow">我的关注</string>
    <string name="my_subscription">我的订阅</string>
    <string name="my_download">我的下载</string>
    <string name="offline_caching">离线缓存</string>
    <string name="my_collection">我的收藏</string>
    <string name="play_record">播放记录</string>
    <string name="remind_region_code_invalid">地区代码无效</string>
    <string name="phone">手机</string>
    <string name="confirm">确定</string>
    <string name="email">邮&#160;&#160;&#160;&#160;箱</string>
    <string name="identity_card">身份证</string>
    <string name="identity_card_space">身&#160;&#160;份&#160;&#160;证</string>
    <string name="authentication">认证</string>
    <string name="real_name">真实姓名</string>
    <string name="password_old">原密码</string>
    <string name="password_new">新密码</string>
    <string name="password_affirm">确认密码</string>
    <string name="save">保存</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="date_of_birth">出生日期</string>
    <string name="address">地址</string>
    <string name="QQ">QQ</string>
    <string name="action_title_message_login_">用验证码登录</string>
    <string name="tab_find">发现</string>
    <string name="tab_course">课程</string>
    <string name="tab_live">直播</string>
    <string name="tab_custom">定制</string>
    <string name="tab_teacher">名师</string>
    <string name="tab_me">我的</string>
    <string name="lable_programs_subscription">节目订阅</string>
    <string name="lable_teacher_recommended">名师推荐</string>
    <string name="followed">已关注</string>
    <string name="follow">关注</string>
    <string name="follow_new">+&#160;关注</string>
    <string name="subscription">订阅</string>
    <string name="subscriptioned">已订阅</string>
    <string name="subscription_new">+&#160;订阅</string>
    <string name="system_setting">系统设置</string>
    <string name="allow_not_wifi">允许在非WI-FI网络缓存</string>
    <string name="cache_sharpness">缓存视频清晰度</string>
    <string name="other">其它</string>
    <string name="guide_page">引导页</string>
    <string name="feedback">意见反馈</string>
    <string name="give_me_the_score">给我评分</string>
    <string name="share_app">分享APP给好友</string>
    <string name="share">分享</string>
    <string name="about_we">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="account">账号</string>
    <string name="account_twoSpace">账&#160;&#160;&#160;&#160;号</string>
    <string name="account_fourSpace">账&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="perfect">完善</string>
    <string name="default_date_for_birth">1970&#8211;01&#8211;01</string>
    <string name="setting">设置</string>
    <string name="hint_input_email">请输入您的邮箱</string>
    <string name="hint_input_real_name">请填写真实姓名</string>
    <string name="hint_input_password_new">请输入新密码,至少6位</string>
    <string name="hint_authentication">参加官方讲座需进行身份认证</string>
    <string name="hint_perfect_nickname">请完善昵称</string>
    <string name="hint_select_gender">请选择性别</string>
    <string name="hint_phone_or_email">手机号/邮箱</string>
    <string name="hint_select_city">请选择城市</string>
    <string name="lable_fetch_check_code">获取验证码</string>
    <string name="lable_wechat">微信公众号:</string>
    <string name="lable_hotline">客服热线:</string>
    <string name="lable_website">官&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;网:</string>
    <string name="value_follow_count">已关注%d个老师</string>
    <string name="value_follow_count_default">0</string>
    <string name="value_subscriber_count">已订阅%d个节目</string>
    <string name="value_subscriber_count_default">已订阅0个节目</string>
    <string name="value_version">当前版本&#160;V%s</string>
    <string name="sharpness_standard">清晰</string>
    <string name="sharpness_high">高清</string>
    <string name="sharpness_super">超清</string>
    <string name="video">视频</string>
    <string name="article">文章</string>
    <string name="all">全部</string>
    <string name="column_jiePan">解盘</string>
    <string name="column_panQian">盘前</string>
    <string name="column_panQian_No_Other_LAN">盘前</string>
    <string name="column_panZhong">盘中</string>
    <string name="column_panZhong_No_Other_LAN">盘中</string>
    <string name="column_panHou">盘后</string>
    <string name="column_panHou_No_Other_LAN">盘后</string>
    <string name="column_citta">心法</string>
    <string name="column_lecture">讲座</string>
    <string name="knowledge">知识</string>
    <string name="news">新闻</string>
    <string name="programs_gdqc">股动钱潮</string>
    <string name="programs_jqfb">金钱风暴</string>
    <string name="jiepan_zao">早间</string>
    <string name="jiepan_zhong">午间</string>
    <string name="jiepan_wan">晚间</string>
    <string name="news_type_CLYB">策略研报</string>
    <string name="news_type_GGYB">个股研报</string>
    <string name="news_type_HYYB">行业研报</string>
    <string name="news_type_GZQH">股指期货</string>
    <string name="news_type_RZRQ">融资融券</string>
    <string name="news_type_GXZY">股权质押</string>
    <string name="news_type_YJBG">业绩报告</string>
    <string name="news_type_ZGCJ">中国财经</string>
    <string name="news_type_QQCJ">全球财经</string>
    <string-array name="array_news_type">
        <item>@string/all</item>
        <item>策略研报</item>
        <item>个股研报</item>
        <item>行业研报</item>
        <item>股指期货</item>
        <item>融资融券</item>
        <item>股权质押</item>
        <item>业绩报告</item>
        <item>中国财经</item>
        <item>全球财经</item>
    </string-array>
    <string-array name="video_sharpness">
        <item>清晰</item>
        <item>高清</item>
        
    </string-array>
    <string name="hint_comment">我来说两句</string>
    <string name="hint_comment2">我来评论&#8230;&#8230;&#8230;</string>
    <string name="hint_comment3">我来评论&#8230;&#8230;&#8230;(限140个字符)</string>
    <string name="tag_comment_hot">热门评论</string>
    <string name="tag_comment_all">全部评论</string>
    <string name="tag_comment_new">最新评论</string>
    <string name="tag_comment_more">更多评论&#160;▶</string>
    <string name="tag_video_other">其它视频</string>
    <string name="tag_video_recommend">视频推荐</string>
    <string name="tag_jiepan_teacher">解盘名师</string>
    <string name="tag_without_hot_comment">暂无热门评论</string>
    <string name="tag_respond">回复了</string>
    <string name="value_video_play_count">%s次播放</string>
    <string name="value_video_fans_count">粉丝数:%d</string>
    <string name="value_video_fans_count_s">粉丝数:%s</string>
    <string name="value_video_subscribe_count">订阅数:%d</string>
    <string name="value_video_subscribe_count_s">订阅数:%s</string>
    <string name="value_video_favour_count">%d赞</string>
    <string name="value_sdcard_capacity">已使用%1$s/剩余%2$s</string>
    <string name="value_delete_count">删除&#160;(%d)</string>
    <string name="value_download_ing_count">正在下载(%d)</string>
    <string name="value_comment_source">来自%s端</string>
    <string name="value_region_code_and_phone">+%1$s&#160;&#160;%2$s</string>
    <string name="value_live_anchor">主持人:%s</string>
    <string name="value_live_item_time">%1$s&#160;&#160;%2$s</string>
</resources>