<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_forget_password2">


    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            style="@style/IGXEdit_ForViewGroup_style">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/check_code_space_at_center"
                />

            <EditText
                android:id="@+id/et_check_code"
                style="@style/IGXShortCheckCode_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/check_code"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/et_password"/>
        </LinearLayout>

        <View
            style="@style/IGXDefault_Divider"
            />

        <LinearLayout
            style="@style/IGXEdit_ForViewGroup_style">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/password_fourSpaces"/>

            <EditText
                android:id="@+id/et_password"
                style="@style/IGXBase_Edit_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:nextFocusDown="@+id/et_affirm_password"/>

        </LinearLayout>

        <View
            style="@style/IGXDefault_Divider"
            />

        <LinearLayout
            style="@style/IGXEdit_ForViewGroup_style">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/password_affirm"/>

            <EditText
                android:id="@+id/et_affirm_password"
                style="@style/IGXBase_Edit_Style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>

        </LinearLayout>
        <View style="@style/IGXDefault_Divider"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        style="@style/IGXLong_Button_style"
        android:layout_below="@id/ll_top"
        android:layout_marginTop="@dimen/activity_vertical_margin2x"
        android:text="@string/confirm"
        />


</RelativeLayout>
