<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".me.activity.PerfectPersonalActivity"
    tools:showIn="@layout/activity_perfect_personal">


    <android.support.v7.widget.CardView
        android:id="@+id/cv_top"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardCornerRadius="2dp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true"
        >

        <LinearLayout
            android:id="@+id/ll_perfect_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/IGXEdit_ForViewGroup_style">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/nickname"/>

                <EditText
                    android:id="@+id/et_nickname"
                    style="@style/IGXBase_Edit_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/hint_perfect_nickname"
                    android:imeOptions="actionDone"
                    android:maxLength="@integer/nickname_length"
                    android:nextFocusDown="@+id/tv_gender"/>

            </LinearLayout>

            <View
                style="@style/IGXDefault_Divider"/>

            <LinearLayout
                android:id="@+id/ll_select_gender"
                style="@style/IGXEdit_ForViewGroup_style">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/gender"/>

                <TextView
                    android:id="@+id/tv_gender"
                    style="@style/IGXBase_Edit_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:hint="@string/hint_select_gender"
                    android:nextFocusDown="@+id/tv_date_of_birth"
                    />

            </LinearLayout>

            <View
                style="@style/IGXDefault_Divider"/>

            <LinearLayout
                android:id="@+id/ll_date_of_birth"
                style="@style/IGXEdit_ForViewGroup_style">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/date_of_birth"/>

                <TextView
                    android:id="@+id/tv_date_of_birth"
                    style="@style/IGXBase_Edit_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:hint="@string/default_date_for_birth"
                    android:nextFocusDown="@+id/tv_addres"
                    />

            </LinearLayout>

            <View
                style="@style/IGXDefault_Divider"
                />

            <LinearLayout
                android:id="@+id/ll_address"
                style="@style/IGXEdit_ForViewGroup_style">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/address"/>


                <TextView
                    android:id="@+id/tv_addres"
                    style="@style/IGXBase_Edit_Style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:hint="@string/hint_select_city"
                    android:nextFocusDown="@+id/tv_qq"
                    android:paddingEnd="@dimen/small_margin"
                    android:paddingLeft="0dp"
                    android:paddingRight="@dimen/small_margin"
                    android:paddingStart="0dp"
                    />
                <!--</HorizontalScrollView>-->

            </LinearLayout>

            <View
                style="@style/IGXDefault_Divider"
                />

            <LinearLayout
                style="@style/IGXEdit_ForViewGroup_style">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/QQ"/>

                <EditText
                    android:id="@+id/et_qq"
                    style="@style/IGXBase_Edit_Style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="8"
                    android:digits="0123456789"
                    android:hint="@string/QQ"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"/>

            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_submit"
        style="@style/IGXLong_Button_style"
        android:layout_below="@id/cv_top"
        android:layout_marginTop="@dimen/activity_vertical_margin2x"
        android:text="@string/save"
        />

</RelativeLayout>