<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:showIn="@layout/activity_message_login_three">


        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                style="@style/edit_for_viewgroup_style">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/password_fourSpaces"/>

                <EditText
                    android:id="@+id/et_new_password"
                    style="@style/base_edit_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:nextFocusDown="@+id/et_affirm_password"
                    />

            </LinearLayout>

            <View
                style="@style/default_divider"
                />

            <LinearLayout
                style="@style/edit_for_viewgroup_style">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/password_affirm"/>

                <EditText
                    android:id="@+id/et_affirm_password"
                    style="@style/base_edit_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:hint="@string/hint_password_affirm"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    />

            </LinearLayout>
            <View style="@style/default_divider"/>
        </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        style="@style/long_button_style"
        android:layout_below="@id/ll_top"
        android:layout_marginTop="@dimen/activity_vertical_margin2x"
        android:text="@string/save"
        />


</RelativeLayout>
